Correcting the nav header

--- a/tour.html
+++ b/tour.html
@@ -10,16 +10,23 @@
 <body>
 
 <!-- Navigation Header -->
-<nav>
-  <ul>
-    <li><a href="index.html">LANY</a></li>
-    <li><a href="tour.html">TOUR</a></li>
-    <li><a href="music.html">MUSIC</a></li>
-    <li><a href="store.html">STORE</a></li>
-    <li><a href="media.html">MEDIA</a></li>
-    <li><a href="about.html">ABOUT</a></li>
-  </ul>
-</nav>
+
+<div class="transbox">
+
+<div class="header">
+  <div class="logo">
+    <a href="index.html"><img class="logo" src="./assets/images/lany-logo.png" alt="Lany logo" /></a>
+  </div>
+    <nav>
+        <ul>
+          <li><a href="tour.html">TOUR</a></li>
+          <li><a href="music.html">MUSIC</a></li>
+          <li><a href="store.html">STORE</a></li>
+          <li><a href="media.html">MEDIA</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+        </ul>
+    </nav>
+</div>
 
 <main>
   <div class="tour">
@@ -111,6 +118,7 @@
   <i class="fa fa-ticket"></i>
   BUY TICKETS @ <a href="https://www.livenation.com/artists/139108/lany">LIVENATION.COM</a>
 </p>
+</div>
 </div>
 
 </main>
