--- a/about.html
+++ b/about.html
@@ -15,12 +15,13 @@
     <a href="index.html"><img class="logo" src="./assets/images/lany-logo.png" alt="Lany logo" /></a>
   </div>
     <nav>
-      <!-- <a href="index.html">LANY</a> -->
-      <a href="tour.html">TOUR</a>
-      <a href="music.html">MUSIC</a>
-      <a href="store.html">STORE</a>
-      <a href="media.html">MEDIA</a>
-      <a href="about.html">ABOUT</a>
+        <ul>
+          <li><a href="tour.html">TOUR</a></li>
+          <li><a href="music.html">MUSIC</a></li>
+          <li><a href="store.html">STORE</a></li>
+          <li><a href="media.html">MEDIA</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+        </ul>
     </nav>
 </div>
 
