Adding nav headers to all pages

--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>LANY</title>
+  <link rel="stylesheet" href="./assets/stylesheets/styles.css"/>
+  <!-- <link rel="stylesheet" href="./assets/stylesheets/about.css"/> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello World</h1>
+
+<!-- Navigation Header -->
+<div class="header">
+  <div class="logo">
+    <a href="index.html"><img class="logo" src="./assets/images/lany-logo.png" alt="Lany logo" /></a>
+  </div>
+    <nav>
+        <ul>
+          <li><a href="tour.html">TOUR</a></li>
+          <li><a href="music.html">MUSIC</a></li>
+          <li><a href="store.html">STORE</a></li>
+          <li><a href="media.html">MEDIA</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+        </ul>
+    </nav>
+</div>
+<main>
+
+</main>
 </body>
 </html>
