--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
   <title>LANY</title>
   <link rel="stylesheet" href="./assets/stylesheets/styles.css"/>
-  <!-- <link rel="stylesheet" href="./assets/stylesheets/about.css"/> -->
+  <link rel="stylesheet" href="./assets/stylesheets/index.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
 
+<video autoplay muted loop id="myVideo">
+  <source src="./assets/video/sunset-desert-run.mp4" type="video/mp4">
+</video>
+
 <!-- Navigation Header -->
+
 <div class="header">
   <div class="logo">
     <a href="index.html"><img class="logo" src="./assets/images/lany-logo.png" alt="Lany logo" /></a>
@@ -25,6 +30,11 @@
     </nav>
 </div>
 <main>
+
+    <!-- <video width="100%" height="100%" autoplay loop>
+      <source src="./assets/video/sunset-desert-run.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video> -->
 
 </main>
 </body>
