--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="index.html"><img class="logo" src="./assets/images/lany-logo.png" alt="Lany logo" /></a>
   </div>
     <nav>
-        <ul>
+        <ul class="nav-links">
           <li><a href="tour.html">TOUR</a></li>
           <li><a href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
