--- a/media.html
+++ b/media.html
@@ -15,7 +15,7 @@
     <a href="index.html"><img class="logo" src="./assets/images/lany-logo.png" alt="Lany logo" /></a>
   </div>
     <nav>
-        <ul>
+        <ul class="nav-links">
           <li><a href="tour.html">TOUR</a></li>
           <li><a href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
@@ -26,6 +26,14 @@
 </div>
 <main>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/O78Lpo4ctSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/g5xxhaKm1RQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SSTp0rknOgA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 </main>
+
+<script src="./assets/javascripts/jquery.js"></script>
+<script src="./assets/javascripts/lightbox.min.js"></script>
+
 </body>
 </html>
