--- a/music.html
+++ b/music.html
@@ -3,7 +3,7 @@
 <head>
   <title>Music</title>
   <link rel="stylesheet" href="./assets/stylesheets/styles.css"/>
-  <!-- <link rel="stylesheet" href="./assets/stylesheets/about.css"/> -->
+  <link rel="stylesheet" href="./assets/stylesheets/music.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
@@ -15,7 +15,7 @@
     <a href="index.html"><img class="logo" src="./assets/images/lany-logo.png" alt="Lany logo" /></a>
   </div>
     <nav>
-        <ul>
+        <ul class="nav-links">
           <li><a href="tour.html">TOUR</a></li>
           <li><a href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
@@ -26,6 +26,25 @@
 </div>
 <main>
 
+  <!-- https://codepen.io/jbasoo/pen/gDkoc -->
+  <div class="malibu-nights">
+    <div class="imgBx">
+      <img src="/assets/images/malibu-nights.png" width="375" height="375"/>
+    </div>
+    <iframe src="https://open.spotify.com/embed/album/6SWmGozzQDUaczHXMuE8Za" width="600" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  </div>
+  <div class="lany-album">
+    <div class="imgBx">
+      <img src="/assets/images/lany-album.png" width="375" height="375"/>
+    </div>
+    <iframe src="https://open.spotify.com/embed/album/0HiwsXForePsWdIZW6EEkK" width="600" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  </div>
+  <div class="make-out">
+    <div class="imgBx">
+      <img src="/assets/images/make-out-album.png" width="375" height="375"/>
+    </div>
+    <iframe src="https://open.spotify.com/embed/album/4m8eGSQH7drGiCIPHmmVqe" width="600" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  </div>
 </main>
 </body>
 </html>
