--- a/store.html
+++ b/store.html
@@ -4,6 +4,7 @@
   <title>Store</title>
   <link rel="stylesheet" href="./assets/stylesheets/styles.css"/>
   <!-- <link rel="stylesheet" href="./assets/stylesheets/about.css"/> -->
+  <link rel="stylesheet" href="./assets/stylesheets/store.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
@@ -15,7 +16,7 @@
     <a href="index.html"><img class="logo" src="./assets/images/lany-logo.png" alt="Lany logo" /></a>
   </div>
     <nav>
-        <ul>
+        <ul class="nav-links">
           <li><a href="tour.html">TOUR</a></li>
           <li><a href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
@@ -24,8 +25,90 @@
         </ul>
     </nav>
 </div>
-<main>
 
+<main>
+  <!-- https://www.w3schools.com/howto/howto_js_filter_elements.asp -->
+
+  <!-- Control buttons -->
+<div class="myBtnContainer">
+  <button class="btn active" onclick="filterSelection('all')"> Show all</button>
+  <button class="btn" onclick="filterSelection('kittens')"> Kittens</button>
+  <button class="btn" onclick="filterSelection('puppies')"> Puppies</button>
+  <button class="btn" onclick="filterSelection('other')"> Other</button>
+</div>
+
+<!-- The filterable elements. Note that some have multiple class names (this can be used if they belong to multiple categories) -->
+<div class="container">
+  <div class="filterDiv kittens">
+    <img class="items" src="./assets/images/store/cest-lany-long-sleeve.png" />
+  </div>
+  <div class="filterDiv other">
+    <img class="items" src="./assets/images/store/lany-beanie.png" />
+  </div>
+  <div class="filterDiv other">
+    <img class="items" src="./assets/images/store/malibu-nights-vinyl.png" />
+  </div>
+  <div class="filterDiv puppies">
+    <img class="items" src="./assets/images/store/silver-necklace.png" />
+  </div>
+  <div class="filterDiv puppies">
+    <img class="items" src="./assets/images/store/warped-lany-shirt.png" />
+  </div>
+  <div class="filterDiv puppies">
+    <img class="items" src="./assets/images/store/world-tour-long-sleeve.png" />
+  </div>
+</div>
+
+  <script>
+    filterSelection("all")
+function filterSelection(c) {
+  var x, i;
+  x = document.getElementsByClassName("filterDiv");
+  if (c == "all") c = "";
+  // Add the "show" class (display:block) to the filtered elements, and remove the "show" class from the elements that are not selected
+  for (i = 0; i < x.length; i++) {
+    w3RemoveClass(x[i], "show");
+    if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
+  }
+}
+
+// Show filtered elements
+function w3AddClass(element, name) {
+  var i, arr1, arr2;
+  arr1 = element.className.split(" ");
+  arr2 = name.split(" ");
+  for (i = 0; i < arr2.length; i++) {
+    if (arr1.indexOf(arr2[i]) == -1) {
+      element.className += " " + arr2[i];
+    }
+  }
+}
+
+// Hide elements that are not selected
+function w3RemoveClass(element, name) {
+  var i, arr1, arr2;
+  arr1 = element.className.split(" ");
+  arr2 = name.split(" ");
+  for (i = 0; i < arr2.length; i++) {
+    while (arr1.indexOf(arr2[i]) > -1) {
+      arr1.splice(arr1.indexOf(arr2[i]), 1);
+    }
+  }
+  element.className = arr1.join(" ");
+}
+
+// Add active class to the current control button (highlight it)
+var btnContainer = document.getElementById("myBtnContainer");
+var btns = btnContainer.getElementsByClassName("btn");
+for (var i = 0; i < btns.length; i++) {
+  btns[i].addEventListener("click", function() {
+    var current = document.getElementsByClassName("active");
+    current[0].className = current[0].className.replace(" active", "");
+    this.className += " active";
+  });
+}
+  </script>
 </main>
+
 </body>
 </html>
