Updates to JS for store page

--- a/store.html
+++ b/store.html
@@ -3,14 +3,13 @@
 <head>
   <title>Store</title>
   <link rel="stylesheet" href="./assets/stylesheets/styles.css"/>
-  <!-- <link rel="stylesheet" href="./assets/stylesheets/about.css"/> -->
   <link rel="stylesheet" href="./assets/stylesheets/store.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
+
 <body>
 
-<!-- Navigation Header -->
 <div class="header">
   <div class="logo">
     <a href="index.html"><img class="logo" src="./assets/images/lany-logo.png" alt="Lany logo" /></a>
@@ -26,89 +25,88 @@
     </nav>
 </div>
 
-<main>
   <!-- https://www.w3schools.com/howto/howto_js_filter_elements.asp -->
 
   <!-- Control buttons -->
 <div class="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-  <button class="btn" onclick="filterSelection('kittens')"> Kittens</button>
-  <button class="btn" onclick="filterSelection('puppies')"> Puppies</button>
-  <button class="btn" onclick="filterSelection('other')"> Other</button>
+  <button class="btn" onclick="filterSelection('tees')"> Tees</button>
+  <button class="btn" onclick="filterSelection('longsleeves')"> Longsleeves</button>
+  <button class="btn" onclick="filterSelection('hats')"> Hats</button>
+  <button class="btn" onclick="filterSelection('accessories')"> Accessories</button>
+  <button class="btn" onclick="filterSelection('music')"> Music</button>
 </div>
 
 <!-- The filterable elements. Note that some have multiple class names (this can be used if they belong to multiple categories) -->
 <div class="container">
-  <div class="filterDiv kittens">
+  <div class="filterDiv longsleeves">
     <img class="items" src="./assets/images/store/cest-lany-long-sleeve.png" />
   </div>
-  <div class="filterDiv other">
+  <div class="filterDiv accessories">
     <img class="items" src="./assets/images/store/lany-beanie.png" />
   </div>
-  <div class="filterDiv other">
+  <div class="filterDiv music">
     <img class="items" src="./assets/images/store/malibu-nights-vinyl.png" />
   </div>
-  <div class="filterDiv puppies">
+  <div class="filterDiv accessories">
     <img class="items" src="./assets/images/store/silver-necklace.png" />
   </div>
-  <div class="filterDiv puppies">
+  <div class="filterDiv tees">
     <img class="items" src="./assets/images/store/warped-lany-shirt.png" />
   </div>
-  <div class="filterDiv puppies">
+  <div class="filterDiv longsleeves">
     <img class="items" src="./assets/images/store/world-tour-long-sleeve.png" />
   </div>
 </div>
 
   <script>
-    filterSelection("all")
-function filterSelection(c) {
-  var x, i;
-  x = document.getElementsByClassName("filterDiv");
-  if (c == "all") c = "";
-  // Add the "show" class (display:block) to the filtered elements, and remove the "show" class from the elements that are not selected
-  for (i = 0; i < x.length; i++) {
-    w3RemoveClass(x[i], "show");
-    if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
-  }
-}
-
-// Show filtered elements
-function w3AddClass(element, name) {
-  var i, arr1, arr2;
-  arr1 = element.className.split(" ");
-  arr2 = name.split(" ");
-  for (i = 0; i < arr2.length; i++) {
-    if (arr1.indexOf(arr2[i]) == -1) {
-      element.className += " " + arr2[i];
+  filterSelection("all")
+  function filterSelection(c) {
+    var x, i;
+    x = document.getElementsByClassName("filterDiv");
+    if (c == "all") c = "";
+    // Add the "show" class (display:block) to the filtered elements, and remove the "show" class from the elements that are not selected
+    for (i = 0; i < x.length; i++) {
+      w3RemoveClass(x[i], "show");
+      if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
     }
   }
-}
 
-// Hide elements that are not selected
-function w3RemoveClass(element, name) {
-  var i, arr1, arr2;
-  arr1 = element.className.split(" ");
-  arr2 = name.split(" ");
-  for (i = 0; i < arr2.length; i++) {
-    while (arr1.indexOf(arr2[i]) > -1) {
-      arr1.splice(arr1.indexOf(arr2[i]), 1);
+  // Show filtered elements
+  function w3AddClass(element, name) {
+    var i, arr1, arr2;
+    arr1 = element.className.split(" ");
+    arr2 = name.split(" ");
+    for (i = 0; i < arr2.length; i++) {
+      if (arr1.indexOf(arr2[i]) == -1) {
+        element.className += " " + arr2[i];
+      }
     }
   }
-  element.className = arr1.join(" ");
-}
 
-// Add active class to the current control button (highlight it)
-var btnContainer = document.getElementById("myBtnContainer");
-var btns = btnContainer.getElementsByClassName("btn");
-for (var i = 0; i < btns.length; i++) {
-  btns[i].addEventListener("click", function() {
-    var current = document.getElementsByClassName("active");
-    current[0].className = current[0].className.replace(" active", "");
-    this.className += " active";
-  });
-}
+  // Hide elements that are not selected
+  function w3RemoveClass(element, name) {
+    var i, arr1, arr2;
+    arr1 = element.className.split(" ");
+    arr2 = name.split(" ");
+    for (i = 0; i < arr2.length; i++) {
+      while (arr1.indexOf(arr2[i]) > -1) {
+        arr1.splice(arr1.indexOf(arr2[i]), 1);
+      }
+    }
+    element.className = arr1.join(" ");
+  }
+
+  // Add active class to the current control button (highlight it)
+  var btnContainer = document.getElementById("myBtnContainer");
+  var btns = btnContainer.getElementsByClassName("btn");
+  for (var i = 0; i < btns.length; i++) {
+    btns[i].addEventListener("click", function() {
+      var current = document.getElementsByClassName("active");
+      current[0].className = current[0].className.replace(" active", "");
+      this.className += " active";
+    });
+  }
   </script>
-</main>
-
 </body>
 </html>
