Fixed filter, added merch items, media WIP

--- a/media.html
+++ b/media.html
@@ -3,7 +3,7 @@
 <head>
   <title>Media</title>
   <link rel="stylesheet" href="./assets/stylesheets/styles.css"/>
-  <!-- <link rel="stylesheet" href="./assets/stylesheets/about.css"/> -->
+  <link rel="stylesheet" href="./assets/stylesheets/media.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
@@ -25,11 +25,14 @@
     </nav>
 </div>
 <main>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/O78Lpo4ctSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/g5xxhaKm1RQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/SSTp0rknOgA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+  <div class="photo-block"
+    <img class="media-photo" src="/assets/images/media/lany-photo-1.jpg" />
+  </div>
+  <div class="video-block"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/O78Lpo4ctSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/g5xxhaKm1RQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/SSTp0rknOgA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
 </main>
 
 <script src="./assets/javascripts/jquery.js"></script>
