--- a/media.html
+++ b/media.html
@@ -25,10 +25,13 @@
     </nav>
 </div>
 <main>
-  <div class="photo-block"
+  <div class="photo-block">
+    <!-- <a href="./assets/images/lightbox/kitten-1.jpg" data-lightbox="image-1" data-title="Mittens">
+  <img src="./assets/images/lightbox/kitten-1-thumbnail.jpg" />
+  </a> -->
     <img class="media-photo" src="/assets/images/media/lany-photo-1.jpg" />
   </div>
-  <div class="video-block"
+  <div class="video-block">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/O78Lpo4ctSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/g5xxhaKm1RQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/SSTp0rknOgA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
