--- a/music.html
+++ b/music.html
@@ -27,19 +27,19 @@
 <main>
   <div class="malibu-nights">
     <div class="imgBx">
-      <img src="/assets/images/malibu-nights.png" width="375" height="375"/>
+      <img src="./assets/images/malibu-nights.png" width="375" height="375"/>
     </div>
     <iframe src="https://open.spotify.com/embed/album/6SWmGozzQDUaczHXMuE8Za" width="600" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </div>
   <div class="lany-album">
     <div class="imgBx">
-      <img src="/assets/images/lany-album.png" width="375" height="375"/>
+      <img src="./assets/images/lany-album.png" width="375" height="375"/>
     </div>
     <iframe src="https://open.spotify.com/embed/album/0HiwsXForePsWdIZW6EEkK" width="600" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </div>
   <div class="make-out">
     <div class="imgBx">
-      <img src="/assets/images/make-out-album.png" width="375" height="375"/>
+      <img src="./assets/images/make-out-album.png" width="375" height="375"/>
     </div>
     <iframe src="https://open.spotify.com/embed/album/4m8eGSQH7drGiCIPHmmVqe" width="600" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </div>
