Media page updates

--- a/media.html
+++ b/media.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="./assets/stylesheets/media.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+  <link rel="stylesheet" href="./assets/stylesheets/lightbox.min.css"/>
 </head>
 <body>
 
@@ -25,16 +26,61 @@
     </nav>
 </div>
 <main>
-  <div class="photo-block">
-    <!-- <a href="./assets/images/lightbox/kitten-1.jpg" data-lightbox="image-1" data-title="Mittens">
-  <img src="./assets/images/lightbox/kitten-1-thumbnail.jpg" />
-  </a> -->
-    <img class="media-photo" src="/assets/images/media/lany-photo-1.jpg" />
+  <div class="gallery">
+    <h2>Photos</h2>
+    <div class="photo-container">
+      <a class="photo-card" href="./assets/images/media/lany-photo-1.png" data-lightbox="mygallery">
+        <img src="./assets/images/media/lany-photo-1.png" />
+      </a>
+    </div>
+    <div class="photo-container">
+      <a class="photo-card" href="./assets/images/media/lany-photo-2.png" data-lightbox="mygallery">
+        <img src="./assets/images/media/lany-photo-2.png" />
+      </a>
+    </div>
+    <div class="photo-container">
+      <a class="photo-card" href="./assets/images/media/lany-photo-3.png" data-lightbox="mygallery">
+        <img src="./assets/images/media/lany-photo-3.png" />
+      </a>
+    </div>
+    <div class="photo-container">
+      <a class="photo-card" href="./assets/images/media/lany-photo-4.png" data-lightbox="mygallery">
+        <img src="./assets/images/media/lany-photo-4.png" />
+      </a>
+    </div>
+    <div class="photo-container">
+      <a class="photo-card" href="./assets/images/media/lany-photo-5.png" data-lightbox="mygallery">
+        <img src="./assets/images/media/lany-photo-5.png" />
+      </a>
+    </div>
+    <div class="photo-container">
+      <a class="photo-card" href="./assets/images/media/lany-photo-6.png" data-lightbox="mygallery">
+        <img src="./assets/images/media/lany-photo-6.png" />
+      </a>
+    </div>
+    <div class="photo-container">
+      <a class="photo-card" href="./assets/images/media/lany-photo-7.png" data-lightbox="mygallery">
+        <img src="./assets/images/media/lany-photo-7.png" />
+      </a>
+    </div>
+    <div class="photo-container">
+      <a class="photo-card" href="./assets/images/media/lany-photo-8.png" data-lightbox="mygallery">
+        <img src="./assets/images/media/lany-photo-8.png" />
+      </a>
+    </div>
   </div>
+
   <div class="video-block">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/O78Lpo4ctSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/g5xxhaKm1RQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/SSTp0rknOgA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h2>Videos</h2>
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/O78Lpo4ctSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/g5xxhaKm1RQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/SSTp0rknOgA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
   </div>
 </main>
 
