--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
           <li><a href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
           <li><a href="media.html">MEDIA</a></li>
-          <li><a href="about.html">ABOUT</a></li>
+          <li><a class="active" href="about.html">ABOUT</a></li>
         </ul>
     </nav>
 </div>
@@ -39,13 +39,10 @@
   </p>
 
   <h2>MEMBERS</h2>
-  <ul>
-  <li>Paul Jason Klein</li>
-  <li><i>lead vocals, piano, keyboards, guitar</i></li>
-  <li>Jake Clifford Goss</li>
-  <li><i>drums, percussion, sampling pad</i></li>
-  <li>Les Priest</li>
-  <li><i>keyboards, synthesizers, guitar, backing vocals</i></li>
+  <ul class="band-members">
+  <li>Paul Jason Klein -<i> lead vocals, piano, keyboards, guitar</i></li>
+  <li>Jake Clifford Goss -<i> drums, percussion, sampling pad</i></li>
+  <li>Les Priest -<i> keyboards, synthesizers, guitar, backing vocals</i></li>
   </ul>
 </div>
 
