--- a/media.html
+++ b/media.html
@@ -20,14 +20,14 @@
           <li><a href="tour.html">TOUR</a></li>
           <li><a href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
-          <li><a href="media.html">MEDIA</a></li>
+          <li><a class="active" href="media.html">MEDIA</a></li>
           <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
 </div>
 <main>
   <div class="gallery">
-    <h2>Photos</h2>
+    <h2>PHOTOS</h2>
     <div class="photo-container">
       <a class="photo-card" href="./assets/images/media/lany-photo-1.png" data-lightbox="mygallery">
         <img src="./assets/images/media/lany-photo-1.png" />
@@ -71,7 +71,7 @@
   </div>
 
   <div class="video-block">
-    <h2>Videos</h2>
+    <h2>VIDEOS</h2>
     <div class="video-container">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/O78Lpo4ctSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
@@ -80,6 +80,9 @@
     </div>
     <div class="video-container">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/SSTp0rknOgA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/gi5BPYuSLt4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
 </main>
