--- a/music.html
+++ b/music.html
@@ -17,14 +17,14 @@
     <nav>
         <ul class="nav-links">
           <li><a href="tour.html">TOUR</a></li>
-          <li><a href="music.html">MUSIC</a></li>
+          <li><a class="active" href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
           <li><a href="media.html">MEDIA</a></li>
           <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
 </div>
-<main>
+<div class="container">
   <div class="malibu-nights">
     <div class="imgBx">
       <img src="./assets/images/malibu-nights.png" width="375" height="375"/>
@@ -43,6 +43,6 @@
     </div>
     <iframe src="https://open.spotify.com/embed/album/4m8eGSQH7drGiCIPHmmVqe" width="600" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </div>
-</main>
+</div>
 </body>
 </html>
