--- a/tour.html
+++ b/tour.html
@@ -14,12 +14,12 @@
 <div class="transbox">
 
 <div class="header">
-  <div class="logo">
-    <a href="index.html"><img class="logo" src="./assets/images/lany-logo.png" alt="Lany logo" /></a>
+  <div class="text-logo">
+    <a href="index.html"><h1>L A N Y</h1></a>
   </div>
     <nav>
         <ul class="nav-links">
-          <li><a href="tour.html">TOUR</a></li>
+          <li><a class="active" href="tour.html">TOUR</a></li>
           <li><a href="music.html">MUSIC</a></li>
           <li><a href="store.html">STORE</a></li>
           <li><a href="media.html">MEDIA</a></li>
@@ -115,8 +115,7 @@
   </table>
 
 <p>
-  <i class="fa fa-ticket"></i>
-  BUY TICKETS @ <a href="https://www.livenation.com/artists/139108/lany">LIVENATION.COM</a>
+   <a href="https://www.livenation.com/artists/139108/lany"><i class="fa fa-ticket"></i> BUY TICKETS @ LIVENATION.COM</a>
 </p>
 </div>
 </div>
