--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-<video autoplay muted loop id="myVideo">
-  <source src="./assets/video/sunset-desert-run.mp4" type="video/mp4">
-</video>
+<!-- <video autoplay loop id="myVideo" plays-inline>
+  <source src="./assets/video/lany-background-video.mp4" type="video/mp4">
+</video> -->
 
 <!-- Navigation Header -->
 
@@ -29,13 +29,6 @@
         </ul>
     </nav>
 </div>
-<main>
 
-    <!-- <video width="100%" height="100%" autoplay loop>
-      <source src="./assets/video/sunset-desert-run.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-    </video> -->
-
-</main>
 </body>
 </html>
