Attempting background video again

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-<!-- <video autoplay loop id="myVideo" plays-inline>
+<video autoplay loop id="myVideo" plays-inline>
   <source src="./assets/video/lany-background-video.mp4" type="video/mp4">
-</video> -->
+</video>
 
 <!-- Navigation Header -->
 
